# advent-of-code-solutions

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/: README.md
src/aoc2023/: day1.ipynb  day2.ipynb
