# pyproject.toml

[build-system]
  requires = ["setuptools>=65.0.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "advent-of-code-solutions"
  version = "0.0.1"
  authors = [
    { name = "Theodor Blom", email = "me@theodorblom.com" },
  ]
  description = "My solutions to the Advent of Code problems"
  readme = "README.md"
  requires-python = ">=3.9,<3.13"
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
    "advent-of-code-data >= 2.0.1, < 3",
  ]

[project.optional-dependencies]
  dev = [
    "pytest >= 7, < 8",
    "pytest-cov >= 4, < 5",
  ]
  docs = [
    "mkdocs >= 1.5.3, < 2",
    "mkdocstrings[python] >= 0.24.0, < 1",
    "mkdocs-material >= 9.5.2, < 10",
    "mkdocs-gen-files >= 0.5.0, < 1",
    "mkdocs-literate-nav >= 0.6.1, < 1",
    "black >= 23.12.0, < 24",
  ]

[tool.pytest.ini_options]
  addopts = "-v --cov='src'"
  testpaths = "tests"

[project.urls]
  homepage = "https://github.com/Theeoi/advent-of-code-solutions"
